<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_repeat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">


        <TextView
            android:id="@+id/tv_input_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_input_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_input_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_input_type">

            <RadioButton
                android:id="@+id/rb_option_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit" />

            <RadioButton
                android:id="@+id/rb_option_debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/debit" />
        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_spinner_detail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:entries="@array/details_elements_credit"
            android:hint="@string/detail"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/rg_input_type"
            app:layout_constraintTop_toBottomOf="@+id/rg_input_type">

            <AutoCompleteTextView
                android:id="@+id/actv_detail_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:enabled="false"
                android:hint="@string/detail"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilValue"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/til_spinner_detail"
            app:layout_constraintTop_toBottomOf="@+id/til_spinner_detail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:enabled="false"
                android:hint="@string/value_local_money"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_entry_date"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tilValue"
            app:layout_constraintTop_toBottomOf="@+id/tilValue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_entry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/entry_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/submit"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/til_entry_date"
            app:layout_constraintTop_toBottomOf="@+id/til_entry_date" />

        <Button
            android:id="@+id/bt_check_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/check_entries"
            app:layout_constraintEnd_toEndOf="@+id/bt_submit"
            app:layout_constraintStart_toStartOf="@+id/bt_submit"
            app:layout_constraintTop_toBottomOf="@+id/bt_submit" />

        <Button
            android:id="@+id/bt_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/balance"
            app:layout_constraintEnd_toEndOf="@+id/bt_check_entries"
            app:layout_constraintStart_toStartOf="@+id/bt_check_entries"
            app:layout_constraintTop_toBottomOf="@+id/bt_check_entries" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme"
            app:layout_constraintBottom_toBottomOf="@+id/tv_input_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_input_type" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>